# forge-demo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  run-demo.bat  run-demo.sh
.asimov/: exhaustive.json  project.yaml  roadmap.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  inquiry.md
.github/workflows/: ci.yml  release.yml
docs/: FUNCTIONS.md  ROADMAP.md  SCHEMA_v1.md  SECURITY.md  WHY_YAML.md
examples/: loan_calculator.yaml  quarterly_pl.yaml  saas_metrics.yaml
src/: engine.rs  excel.rs  main.rs  runner.rs  tui.rs  types.rs
src/tui/: app.rs  draw.rs  mod.rs  state.rs
tests/e2e/: aggregation.yaml  date.yaml  edge_arithmetic.yaml  edge_comparison.yaml  edge_dates.yaml  edge_errors.yaml  edge_logical_agg.yaml  edge_numeric.yaml  edge_string_ops.yaml  edge_type_coercion.yaml  logical.yaml  lookup.yaml  math.yaml  text.yaml
