[package]
name = "forge-e2e"
version = "1.0.2"
edition = "2021"
authors = ["RoyalBit Inc. <admin@royalbit.ca>"]
description = "E2E validation tool for forge-demo - validates calculations against Gnumeric/LibreOffice"
repository = "https://github.com/royalbit/forge-demo"
license = "MIT"
readme = "README.md"

[[bin]]
name = "forge-e2e"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Temp files for XLSX/CSV
tempfile = "3.14"

# Colored output for --all mode
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CSV parsing
csv = "1.3"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
