[package]
name = "forge-e2e"
version = "2.1.0"
edition = "2021"
authors = ["RoyalBit Inc. <admin@royalbit.ca>"]
description = "E2E validation tool for forge-demo - validates calculations against Gnumeric"
repository = "https://github.com/royalbit/forge-demo"
license-file = "LICENSE"
readme = "README.md"
publish = false

[[bin]]
name = "forge-e2e"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.29"

# CLI
clap = { version = "4.5", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"

# Temp files for XLSX/CSV
tempfile = "3.23"

# Colored output for --all mode
colored = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel execution
rayon = "1.10"

# Timestamps
chrono = "0.4"

# CSV parsing
csv = "1.4"

# Excel reading/writing for E2E tests
calamine = "0.32"
rust_xlsxwriter = "0.92"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these for pragmatic reasons
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
